--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <!-- <include src="./partials/example.html"></include> -->
+    <include src="./partials/let's_start.html"></include>
+    <div class="gallery"></div>
+    <button type="button" class="load-more">Load more</button>
   </body>
 </html>
